@@ -9,6 +9,9 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/182
+  Fix "make teststackless" for out of tree builds
+
 
 What's New in Stackless 3.6.5 and 3.6.6?
 ========================================
